# typed-arrow

./: AGENTS.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: rust.yml
arrow-native-derive/: Cargo.toml
arrow-native-derive/src/: lib.rs
benches/: append_rows.rs
docs/: dynamic-runtime.md  extensibility.md  nested-types.md  unified-facade.md
examples/: 01_primitives.rs  02_lists.rs  03_dictionary.rs  04_timestamps.rs  04b_timestamps_tz.rs  05_structs.rs  06_rows_flat.rs  07_rows_nested.rs  08_record_batch.rs  09_duration_interval.rs  10_union.rs  11_map.rs  12_ext_hooks.rs  13_record_batch_views.rs  14_generic_record.rs
src/: bridge.rs  error.rs  lib.rs  schema.rs
src/bridge/: binary.rs  column.rs  decimals.rs  dictionary.rs  intervals.rs  lists.rs  map.rs  mod.rs  null_type.rs  option.rs  primitives.rs  record_struct.rs  strings.rs  temporal.rs
tests/: binary_view.rs  composability.rs  custom_view_errors.rs  decimal.rs  deep_nested.rs  dictionary.rs  dictionary_values.rs  field_name_override.rs  fixed_size_binary.rs  fixed_size_list.rs  fixed_size_list_struct.rs  generic_record.rs  intervals.rs  jiff_timestamp.rs  large_binary.rs  large_list.rs  large_list_struct.rs  large_utf8.rs  list.rs  list_of_struct.rs  list_of_struct_nulls.rs  map.rs  map_in_record.rs  map_ordered.rs  metadata.rs  more_combinations.rs  more_primitives.rs  nested_null.rs  null_record.rs  null_type.rs  primitive_macro.rs  record_batch.rs  record_batch_views.rs  record_batch_views_comprehensive.rs  record_batch_views_dictionary.rs  record_batch_views_lists.rs  record_batch_views_maps.rs  record_batch_views_temporal.rs  record_batch_views_union.rs  rows.rs  (+13 more)
tests/success/: generic_record.rs  no_direct_arrow_dep.rs
typed-arrow-benches/: Cargo.toml
typed-arrow-benches/benches/: append_rows.rs
typed-arrow-benches/src/: lib.rs
typed-arrow-derive/: Cargo.toml
typed-arrow-derive/src/: attrs.rs  lib.rs  record.rs  union.rs
typed-arrow-derive/tests/success/: no_direct_arrow_dep.rs
typed-arrow-dyn/: Cargo.toml  README.md
typed-arrow-dyn/examples/: dyn_views.rs  nested_struct_list.rs
typed-arrow-dyn/src/: builders.rs  cell.rs  dyn_builder.rs  error.rs  factory.rs  lib.rs  nested.rs  projection.rs  rows.rs  schema.rs  union.rs  validate.rs  view.rs
typed-arrow-dyn/src/view/: cell.rs  mod.rs  path.rs  projection.rs  raw.rs  rows.rs  tests.rs  views.rs
typed-arrow-dyn/tests/: deep_nested.rs  dictionary.rs  dictionary_prim.rs  map.rs  nested.rs  nullability.rs  rows.rs  union_dense.rs  union_errors.rs  union_sparse.rs  view_error.rs  views.rs
typed-arrow-unified/: Cargo.toml
typed-arrow-unified/src/: lib.rs
