[workspace]
members = [".", "typed-arrow-derive", "typed-arrow-dyn"]
package.edition = "2024"
package.license = "Apache-2.0"
package.readme = "README.md"
package.repository = "https://github.com/tonbo-io/typed-arrow"
package.version = "0.5.1"

[workspace.dependencies]
typed-arrow = { path = ".", version = "0.5.1", package = "typed-arrow" }
typed-arrow-derive = { path = "typed-arrow-derive", version = "0.5.1", package = "typed-arrow-derive" }
typed-arrow-dyn = { path = "typed-arrow-dyn", version = "0.0.6", package = "typed-arrow-dyn" }

arrow-array = { version = "56" }
arrow-buffer = { version = "56" }
arrow-data = { version = "56" }
arrow-schema = { version = "56" }
half = "2"
parquet = { version = "56" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[package]
description = "Compile-time Arrow schemas for Rust."
edition = { workspace = true }
license = { workspace = true }
name = "typed-arrow"
readme = { workspace = true }
repository = { workspace = true }
resolver = "2"
version = { workspace = true }

[features]
default = ["derive", "views"]
derive = ["dep:typed-arrow-derive"]
ext-hooks = ["derive", "typed-arrow-derive/ext-hooks"]
views = ["derive", "typed-arrow-derive/views"]

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-data = { workspace = true }
arrow-schema = { workspace = true }
half = { workspace = true }
thiserror = { workspace = true }
typed-arrow-derive = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.5"
serde = { workspace = true }
serde_arrow = { version = "0.13", features = ["arrow-56"] }
trybuild = "1.0"
typed-arrow-dyn = { workspace = true }

[[bench]]
name = "append_rows"
harness = false

[profile.bench]
lto = true

[[example]]
name = "12_ext_hooks"
path = "examples/12_ext_hooks.rs"
required-features = ["ext-hooks"]

[[example]]
name = "13_record_batch_views"
path = "examples/13_record_batch_views.rs"
required-features = ["views"]

[[test]]
name = "record_batch_views"
path = "tests/record_batch_views.rs"
required-features = ["views"]

[[test]]
name = "record_batch_views_comprehensive"
path = "tests/record_batch_views_comprehensive.rs"
required-features = ["views"]

[[test]]
name = "record_batch_views_dictionary"
path = "tests/record_batch_views_dictionary.rs"
required-features = ["views"]

[[test]]
name = "record_batch_views_lists"
path = "tests/record_batch_views_lists.rs"
required-features = ["views"]

[[test]]
name = "record_batch_views_maps"
path = "tests/record_batch_views_maps.rs"
required-features = ["views"]

[[test]]
name = "record_batch_views_temporal"
path = "tests/record_batch_views_temporal.rs"
required-features = ["views"]

[[test]]
name = "record_batch_views_union"
path = "tests/record_batch_views_union.rs"
required-features = ["views"]

[[test]]
name = "trybuild"
path = "tests/trybuild.rs"
required-features = []
