[workspace]
members = [".", "typed-arrow-derive", "typed-arrow-dyn", "typed-arrow-benches"]
package.edition = "2024"
package.license = "Apache-2.0"
package.readme = "README.md"
package.repository = "https://github.com/tonbo-io/typed-arrow"
package.version = "0.6.0"

[workspace.dependencies]
typed-arrow = { path = ".", version = "0.6.0", package = "typed-arrow", default-features = false }
typed-arrow-derive = { path = "typed-arrow-derive", version = "0.6.0", package = "typed-arrow-derive" }
typed-arrow-dyn = { path = "typed-arrow-dyn", version = "0.0.7", package = "typed-arrow-dyn", default-features = false }
half = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[package]
description = "Compile-time Arrow schemas for Rust."
edition = { workspace = true }
license = { workspace = true }
name = "typed-arrow"
readme = { workspace = true }
repository = { workspace = true }
resolver = "2"
version = { workspace = true }

[features]
default = ["derive", "views", "arrow-57"]
arrow-55 = [
    "dep:arrow-array-55",
    "dep:arrow-buffer-55",
    "dep:arrow-data-55",
    "dep:arrow-schema-55",
]
arrow-56 = [
    "dep:arrow-array-56",
    "dep:arrow-buffer-56",
    "dep:arrow-data-56",
    "dep:arrow-schema-56",
]
arrow-57 = [
    "dep:arrow-array-57",
    "dep:arrow-buffer-57",
    "dep:arrow-data-57",
    "dep:arrow-schema-57",
]
derive = ["dep:typed-arrow-derive"]
ext-hooks = ["derive", "typed-arrow-derive/ext-hooks"]
jiff = ["dep:jiff"]
views = ["derive", "typed-arrow-derive/views"]

[dependencies]
arrow-array-55 = { package = "arrow-array", version = "55", optional = true }
arrow-array-56 = { package = "arrow-array", version = "56", optional = true }
arrow-array-57 = { package = "arrow-array", version = "57", optional = true }
arrow-buffer-55 = { package = "arrow-buffer", version = "55", optional = true }
arrow-buffer-56 = { package = "arrow-buffer", version = "56", optional = true }
arrow-buffer-57 = { package = "arrow-buffer", version = "57", optional = true }
arrow-data-55 = { package = "arrow-data", version = "55", optional = true }
arrow-data-56 = { package = "arrow-data", version = "56", optional = true }
arrow-data-57 = { package = "arrow-data", version = "57", optional = true }
arrow-schema-55 = { package = "arrow-schema", version = "55", optional = true }
arrow-schema-56 = { package = "arrow-schema", version = "56", optional = true }
arrow-schema-57 = { package = "arrow-schema", version = "57", optional = true }
half = { workspace = true }
jiff = { version = "0.2", optional = true }
thiserror = { workspace = true }
typed-arrow-derive = { workspace = true, optional = true }

[dev-dependencies]
serde = { workspace = true }
trybuild = "1.0"

[profile.bench]
lto = true

[[example]]
name = "12_ext_hooks"
path = "examples/12_ext_hooks.rs"
required-features = ["ext-hooks"]

[[example]]
name = "13_record_batch_views"
path = "examples/13_record_batch_views.rs"
required-features = ["views"]

[[test]]
name = "record_batch_views"
path = "tests/record_batch_views.rs"
required-features = ["views"]

[[test]]
name = "record_batch_views_comprehensive"
path = "tests/record_batch_views_comprehensive.rs"
required-features = ["views"]

[[test]]
name = "record_batch_views_dictionary"
path = "tests/record_batch_views_dictionary.rs"
required-features = ["views"]

[[test]]
name = "record_batch_views_lists"
path = "tests/record_batch_views_lists.rs"
required-features = ["views"]

[[test]]
name = "record_batch_views_maps"
path = "tests/record_batch_views_maps.rs"
required-features = ["views"]

[[test]]
name = "record_batch_views_temporal"
path = "tests/record_batch_views_temporal.rs"
required-features = ["views"]

[[test]]
name = "record_batch_views_union"
path = "tests/record_batch_views_union.rs"
required-features = ["views"]

[[test]]
name = "trybuild"
path = "tests/trybuild.rs"
required-features = []

[[test]]
name = "jiff_timestamp"
path = "tests/jiff_timestamp.rs"
required-features = ["jiff", "views"]
