[package]
name = "typed-arrow-benches"
version = "0.0.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = false

[features]
default = ["arrow-57"]
arrow-55 = ["typed-arrow/arrow-55", "typed-arrow-dyn/arrow-55", "serde_arrow/arrow-55"]
arrow-56 = ["typed-arrow/arrow-56", "typed-arrow-dyn/arrow-56", "serde_arrow/arrow-56"]
arrow-57 = ["typed-arrow/arrow-57", "typed-arrow-dyn/arrow-57", "serde_arrow/arrow-57"]

[dependencies]
criterion = "0.5"
serde = { workspace = true }
serde_arrow = { version = "0.13", default-features = false }
typed-arrow = { workspace = true, default-features = false, features = ["derive", "views"] }
typed-arrow-dyn = { workspace = true, default-features = false }

[[bench]]
name = "append_rows"
harness = false
