[package]
name = "typed-arrow-derive"
version = { workspace = true }
edition = { workspace = true }
description = "Proc-macro derive for typed-arrow compile-time schema"
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
resolver = "2"

[lib]
proc-macro = true

[features]
ext-hooks = []
views = []

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
[dev-dependencies]
trybuild = "1.0"
typed-arrow = { workspace = true }

[[test]]
name = "trybuild"
path = "tests/trybuild.rs"
required-features = []