[package]
description = "Proc-macro derive for typed-arrow compile-time schema"
edition = { workspace = true }
license = { workspace = true }
name = "typed-arrow-derive"
readme = { workspace = true }
repository = { workspace = true }
resolver = "2"
version = { workspace = true }

[lib]
proc-macro = true

[features]
ext-hooks = []
views = []

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
