[package]
name = "typed-arrow-dyn"
version = "0.0.2"
edition = { workspace = true }
description = "Dynamic Arrow facade for typed-arrow (runtime schema/builders)."
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
resolver = "2"

[lib]
name = "typed_arrow_dyn"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
typed-arrow = { path = "..", version = "0.4.0", package = "typed-arrow" }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-buffer = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
arrow-data = { workspace = true }
