[package]
description = "Dynamic Arrow facade for typed-arrow (runtime schema/builders)."
edition = { workspace = true }
license = { workspace = true }
name = "typed-arrow-dyn"
readme = { workspace = true }
repository = { workspace = true }
resolver = "2"
version = "0.0.3"

[lib]
name = "typed_arrow_dyn"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
typed-arrow = { workspace = true }

[dev-dependencies]
arrow-data = { workspace = true }
