[package]
name = "typed-arrow-unified"
version = { workspace = true }
edition = { workspace = true }
description = "Unified facade (static/dynamic) built on typed-arrow + typed-arrow-dyn"
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
resolver = "2"

[lib]
name = "typed_arrow_unified"
path = "src/lib.rs"

[dependencies]
typed-arrow = { path = "..", version = "0.1.0", package = "typed-arrow" }
typed-arrow-dyn = { path = "../typed-arrow-dyn", version = "0.1.0", package = "typed-arrow-dyn" }
arrow-schema = { version = "56" }
arrow-array = { version = "56" }
