[package]
name = "typed-arrow-unified"
version = "0.0.1"
edition = { workspace = true }
description = "Unified facade (static/dynamic) built on typed-arrow + typed-arrow-dyn"
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
resolver = "2"

[lib]
name = "typed_arrow_unified"
path = "src/lib.rs"

[dependencies]
typed-arrow = { workspace = true }
typed-arrow-dyn = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
